:bug:Fixed misaligned scrollbar in QuestionNotFound component (#298)

--- a/src/components/Question/components/QuestionNotFound/QuestionNotFound.css
+++ b/src/components/Question/components/QuestionNotFound/QuestionNotFound.css
@@ -1,11 +1,5 @@
 .question-not-found {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  max-width: 700px;
   overflow-y: auto;
-  margin: 0 auto;
   padding: 10px;
 }
 
@@ -17,7 +11,7 @@
 
 .question-not-found .question-mark {
   margin: 12px;
-  opacity: .15;
+  opacity: 0.15;
   height: 300px;
   flex-shrink: 0;
 }
